--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,21 @@
-
 steps:
-- name: gcr.io/k8s-minikube/minikube-nested:experimental
+- name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'bash'
   args:
     - -c
     - |
-      profile list
+      docker build -t minikube-kic .
+- name: gcr.io/cloud-builders/docker
+  entrypoint: 'bash'
+  args:
+    - -c
+    - |
+       docker run -d -t --privileged --name minikube --volume foo:/var minikube-kic:latest
+- name: gcr.io/cloud-builders/docker
+  entrypoint: 'bash'
+  args:
+    - -c
+    - |
+       docker exec minikube /bin/bash -c "minikube start --force"
 options:
   machineType: N1_HIGHCPU_8
