--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,12 @@
-
 steps:
-- name: gcr.io/k8s-minikube/minikube-nested:experimental
+- name: 'gcr.io/cloud-builders/docker'
   entrypoint: 'bash'
   args:
     - -c
-    - |
-      profile list
+      curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+    - sudo install minikube-linux-amd64 /usr/local/bin/minikube
+    - minikube profile list
+    - sudo minikube start --driver=none --force
+
 options:
   machineType: N1_HIGHCPU_8
