--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,9 +4,10 @@ steps:
   args:
     - -c
       curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-    - sudo install minikube-linux-amd64 /usr/local/bin/minikube
-    - minikube profile list
-    - sudo minikube start --driver=none --force
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args:
+    - -c sudo install minikube-linux-amd64 /usr/local/bin/minikube && sudo minikube version && sudo minikube start --driver=none --force
 
 options:
   machineType: N1_HIGHCPU_8
