--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,6 @@ steps:
   args:
     - -c
     - |
-       docker exec minikube /bin/bash -c "minikube start --force"
+       docker exec minikube /bin/bash -c "minikube start --force && kubectl get pods -A"
 options:
   machineType: N1_HIGHCPU_8
