--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
   - |
     curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl > kubectl
     chmod 0750 kubectl
-    curl -L  https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64 > minikube
+    curl -L  https://storage.googleapis.com/minikube-builds/master/minikube-linux-amd64 > minikube
     chmod 0750 minikube
 - name: 'gcr.io/cloud-builders/docker'
   entrypoint: bash
@@ -20,7 +20,7 @@ steps:
       apt-get install -y conntrack sudo
     } >/dev/null
 
-    minikube start --driver=docker --alsologtostderr --force 
+    minikube start --driver=docker --listen---alsologtostderr --force 
     kubectl get pods -A
 
 options:
