--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,8 @@ steps:
   args:
   - -c
   - |
+    apt-get update -y
+    apt-get install -y conntrack sudo curl
     curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl > kubectl
     chmod 0750 kubectl
     curl -L  https://storage.googleapis.com/minikube-builds/master/minikube-linux-amd64 > minikube
