--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,8 +7,7 @@ steps:
   - |
     apt-get update -y
     apt-get install -y conntrack sudo curl
-    curl -fsSL https://get.docker.com -o get-docker.sh
-    sudo sh get-docker.sh
+    sudo apt-get install -y docker-ce docker-ce-cli containerd.io
     sudo usermod -aG docker $(whoami)
     curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl > kubectl
     chmod 0750 kubectl
