--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,8 +7,6 @@ steps:
   - |
     apt-get update -y
     apt-get install -y conntrack sudo curl
-    sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-    sudo usermod -aG docker $(whoami)
     docker version
     curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl > kubectl
     chmod 0750 kubectl
@@ -23,7 +21,12 @@ steps:
     {
       apt-get update -y
       apt-get install -y conntrack sudo iptables
-      apt-get install -y docker-ce docker-ce-cli containerd.io
+      apt install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
+      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+      apt-get update -y
+      apt install -y docker-ce docker-ce-cli containerd.io
+
 
     } >/dev/null
 
