--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,13 +19,11 @@ steps:
   - |
     PATH="$${PATH}:$${PWD}/bin"
     {
+      sh -c "echo 'deb https://download.docker.com/linux/ubuntu focal stable' > /etc/apt/sources.list.d/docker.list"
+      curl -L https://download.docker.com/linux/ubuntu/gpg -o docker.key && apt-key add - < docker.key 
       apt-get update -y
+      apt-get install -y docker-ce docker-ce-cli containerd.io
       apt-get install -y conntrack sudo iptables
-      apt install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
-      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-      add-apt-repository -y "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-      apt-get update -y
-      apt install -y docker-ce docker-ce-cli containerd.io
 
 
     } >/dev/null
