--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
   - -c
   - |
     apt-get update -y
-    apt-get install -y conntrack sudo curl
+    apt-get install -y sudo curl
     curl -L https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl > kubectl
     chmod 0750 kubectl
     curl -L  https://storage.googleapis.com/minikube-builds/master/minikube-linux-amd64 > minikube
@@ -18,6 +18,8 @@ steps:
   - |
     PATH="$${PATH}:$${PWD}/bin"
     {
+      apt-get update -y
+      apt-get install -y sudo curl
       sh -c "echo 'deb https://download.docker.com/linux/ubuntu focal stable' > /etc/apt/sources.list.d/docker.list"
       curl -L https://download.docker.com/linux/ubuntu/gpg -o docker.key && apt-key add - < docker.key 
       apt-get update -y
