--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,7 +19,7 @@ steps:
     PATH="$${PATH}:$${PWD}/bin"
     {
       apt-get update -y
-      apt-get install -y sudo curl
+      apt-get install -y sudo curl gnupg
       sh -c "echo 'deb https://download.docker.com/linux/ubuntu focal stable' > /etc/apt/sources.list.d/docker.list"
       curl -L https://download.docker.com/linux/ubuntu/gpg -o docker.key && apt-key add - < docker.key 
       apt-get update -y
